# Computare

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
assets/brand/: BRANDKIT.md
computare/: __init__.py  __main__.py  batch_processor.py  config.py  main.py  models.py  validators.py
computare/api/: __init__.py  app.py  dependencies.py  models.py
computare/api/routes/: categories.py  categorize.py  health.py  merchants.py
computare/categorizer/: __init__.py  cache.py  categories.py  chains.py  normalizer.py  prompts.py  worker.py
computare/database/: __init__.py  linker.py  loader.py
computare/extractors/: __init__.py  base.py  claude_extractor.py  hybrid_extractor.py  pdfplumber_extractor.py  scotiabank_credit_card_extractor.py  scotiabank_investment_extractor.py
computare/parsers/: __init__.py  wealthsimple_parser.py
computare/subscriptions/: __init__.py  detector.py
scripts/: analyze_amex.py  analyze_statements.py  analyze_wealthsimple.py  enrich_json.py  export_categories_from_db.py  export_for_database.py  reload_database.py  run_categorization.py  run_extraction.py  run_subscription_detection.py  sync_categories_to_json.py
supabase/: config.toml
supabase/migrations/: 20260201000000_initial_schema.sql  20260201000001_add_receipts.sql
supabase/snippets/: Untitled query 442.sql
tests/integration/: test_pdf_extraction.py
web/: package.json  pnpm-lock.yaml
web/public/ascii/: soj-ascii-art.txt
web/src/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
web/src/lib/: api.ts  constants.ts  utils.ts
(+214 files in other folders)
